--- a/package.json
+++ b/package.json
@@ -17,31 +17,31 @@
     "@tinymce/tinymce-react": "^6.3.0",
     "chart.js": "^4.5.0",
     "html2canvas": "^1.4.1",
+    "isomorphic-dompurify": "^2.16.0",
     "lucide-react": "^0.263.1",
     "nanoid": "^5.1.6",
-    "next": "^13.5.11",
+    "next": "^14.2.18",
     "papaparse": "^5.5.3",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-select": "^5.10.2",
-    "recharts": "^3.2.1",
-    "xlsx": "^0.18.5"
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.18",
     "@types/html2canvas": "^0.5.35",
-    "@types/node": "20.8.2",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
+    "@types/node": "^22.10.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^17.2.3",
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.6",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.3.3",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.18",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "tinymce": "^8.1.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.6.3"
   }
 }
